--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=320, initial-scale=1">
-    <title>Progress Spinner on Declarative Shadow DOM</title>
+    <title>Progress Spinner on almoust pure css</title>
     <style>
       @font-face {
         font-weight: 550;
@@ -11,17 +11,17 @@
         font-style: normal;
         font-display: swap;
         src:
-          url("/assets/fonts/montserrat-subset.ttf") format("truetype-variations"),
-          url("/assets/fonts/montserrat-subset.woff") format("woff-variations"),
-          url("/assets/fonts/montserrat-subset.woff2") format("woff2-variable");
+          url("./assets/fonts/montserrat-subset.ttf") format("truetype-variations"),
+          url("./assets/fonts/montserrat-subset.woff") format("woff-variations"),
+          url("./assets/fonts/montserrat-subset.woff2") format("woff2-variable");
       }
+
       body {
         font-size: 16px;
         font-family: "Monsterrat", sans-serif;
         letter-spacing: -0.008em;
       }
     </style>
-    <script src="/script.js" type="module" defer></script>
     <link rel="stylesheet" href="/style/utils.css">
     <link rel="stylesheet" href="/style/theme.css">
     <link rel="stylesheet" href="/style/style.css">
@@ -29,83 +29,43 @@
   <body>
     <div class="app-layout">
       <h1 class="layout__header">Progress</h1>
-      <progress-spinner
-        data-value-controlledby="#value"
-        data-animate-controlledby="#animate"
-        data-hide-controlledby="#hide"
-      >
-        <template shadowrootmode="open">
-          <link slot="theme" rel="stylesheet" href="/components/default-theme.css">
-          <link slot="theme" rel="stylesheet" href="/components/progress-spinner/style.css">
-          <slot name="theme"></slot>
-          <div class="progress__circle">
-            <svg class="progress__range"
-              role="image"
-              xmlns="http://www.w3.org/2000/svg"
-              width="100%"
-              height="100%"
-              aria-describedby="range-descripion"
-            >
-              <title>Loading state</title>
-              <text id="range-descripion" class="visually-hidden">Loading on %</text>
-              <circle cx="50%" cy="50%" r="50%" fill="none">
-            </svg>
-          </div>
-        </template>
-      </progress-spinner>
+      <div class="progress__circle">
+        <svg class="progress__range"
+          role="image"
+          xmlns="http://www.w3.org/2000/svg"
+          width="100%"
+          height="100%"
+          aria-describedby="range-descripion"
+        >
+          <title>Loading state</title>
+          <text id="range-descripion" class="visually-hidden">Loading on %</text>
+          <circle cx="50%" cy="50%" r="50%" fill="none">
+        </svg>
+      </div>
       <br>
-      <controls-stack>
-        <template shadowrootmode="open">
-          <fieldset class="progress__controls">
-            <legend class="visually-hidden">Progress Controls</legend>
-            <link slot="theme" rel="stylesheet" href="/style/utils.css">
-            <link slot="theme" rel="stylesheet" href="/components/controls-stack/style.css">
-            <slot name="theme"></slot>
-            <slot></slot>
-          </fieldset>
-        </template>
-        <input-number id="value">
-          <template shadowrootmode="open">
-            <label class="controls__control">
-              <link slot="theme" rel="stylesheet" href="/components/control/style.css">
-              <slot name="theme"></slot>
-              <input
-                class="control__input control__input--number control__input--value" 
-                type="number" 
-                value="75" 
-                min="0" 
-                max="100"
-              >
-              <span class="control__label">Value</span>
-            </label>
-          </template>
-        </input-number>
-        <input-checkbox id="animate">
-        <template shadowrootmode="open">
+      <fieldset class="progress__controls">
+        <legend class="visually-hidden">Progress Controls</legend>
         <label class="controls__control">
-          <link slot="theme" rel="stylesheet" href="/components/control/style.css">
-          <slot name="theme"></slot>
+          <input 
+            class="control__input control__input--number control__input--value" 
+            type="number" 
+            value="75" 
+            min="0" 
+            max="100"
+            onchange="event.target.setAttribute('value', event.target.value)"
+          >
+          <script>const value=document.querySelector(".control__input--value");value.setAttribute("value",value.value)</script>
+          <span class="control__label">Value</span>
+        </label>
+        <label class="controls__control">
           <input class="control__input control__input--checkbox control__input--animate" type="checkbox">
           <span class="control__label">Animate</span>
         </label>
-      </template>
-      </input-checkbox>
-      <input-checkbox id="hide">
-        <template shadowrootmode="open">
         <label class="controls__control">
-          <link slot="theme" rel="stylesheet" href="/components/control/style.css">
-          <slot name="theme"></slot>
           <input class="control__input control__input--checkbox control__input--hide" type="checkbox">
           <span class="control__label">Hide</span>
         </label>
-      </template>
-    </input-checkbox>
-    </controls-stack>
-    <style>
-      fieldset {
-        border: 10px solid red;
-      }
-    </style>
+      </fieldset>
     </div>
   </body>
 </html>
