refactor: rename components

--- a/src/index.html
+++ b/src/index.html
@@ -56,9 +56,9 @@
       <br>
       <fieldset class="layout__inputs-stack inputs-stack">
         <legend class="visually-hidden">Progress Controls</legend>
-        <link class="inputs-stack-style" rel="stylesheet" href="/components/inputs-stack/style.css">
+        <link class="inputs-stack-style" rel="stylesheet" href="/components/Inputs-stack/style.css">
         <label class="input">
-          <link class="input-style" rel="stylesheet" href="/components/input/style.css">
+          <link class="input-style" rel="stylesheet" href="/components/Input/style.css">
           <input
             id="value"
             class="input__value input__value--number input__value--value" 
